--- a/test/bbst.html
+++ b/test/bbst.html
@@ -15,7 +15,7 @@
     <h1>Sorted Array</h1>
     <p id="sorted"></p>
 
-    <h1>Balanced Binary Search Tree</h1>
+    <h1>Balanced Binary Search Tree (BBST)</h1>
     <p id="bst"></p>
 
     <style>
