--- a/test/bbst.html
+++ b/test/bbst.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <button id="add-input">Add Input Field</button>
-    <button id="submit">Generate BBST</button>
+    <button id="submit">Generate - BBST</button>
 
     <div id="input-container"></div>
     <div id="output-container"></div>
