--- a/test/bbst.html
+++ b/test/bbst.html
@@ -87,13 +87,13 @@
       }
 
       function node(array, level) {
-        // Example (even number of elements):
-        // [5,6,7,3,4,2,1,8,9,10].sort
-        // [1,2,3,4,5,6,7,8,9,10].length = 10
-        // [1,2,3,4,5,6,7,8,9,10].medianIndex = 5
-        // [1,2,3,4,5,6,7,8,9,10].medianElement = 6
-        // [1,2,3,4,5,6,7,8,9,10].leftElement = [1,2,3,4,5]
-        // [1,2,3,4,5,6,7,8,9,10].rightElement = [7,8,9,10]
+        Example (even number of elements):
+        [5,6,7,3,4,2,1,8,9,10].sort
+        [1,2,3,4,5,6,7,8,9,10].length = 10
+        [1,2,3,4,5,6,7,8,9,10].medianIndex = 5
+        [1,2,3,4,5,6,7,8,9,10].medianElement = 6
+        [1,2,3,4,5,6,7,8,9,10].leftElement = [1,2,3,4,5]
+        [1,2,3,4,5,6,7,8,9,10].rightElement = [7,8,9,10]
 
         // Example (odd number of elements):
         // [5,6,7,3,4,2,1,8,9].sort
