--- a/test/bbst.html
+++ b/test/bbst.html
@@ -95,13 +95,13 @@
         [1,2,3,4,5,6,7,8,9,10].leftElement = [1,2,3,4,5]
         [1,2,3,4,5,6,7,8,9,10].rightElement = [7,8,9,10]
 
-        // Example (odd number of elements):
-        // [5,6,7,3,4,2,1,8,9].sort
-        // [1,2,3,4,5,6,7,8,9].length = 9
-        // [1,2,3,4,5,6,7,8,9].medianIndex = 4
-        // [1,2,3,4,5,6,7,8,9].medianElement = 5
-        // [1,2,3,4,5,6,7,8,9].leftElement = [1,2,3,4]
-        // [1,2,3,4,5,6,7,8,9].rightElement = [6,7,8,9]
+        Example (odd number of elements):
+        [5,6,7,3,4,2,1,8,9].sort
+        [1,2,3,4,5,6,7,8,9].length = 9
+        [1,2,3,4,5,6,7,8,9].medianIndex = 4
+        [1,2,3,4,5,6,7,8,9].medianElement = 5
+        [1,2,3,4,5,6,7,8,9].leftElement = [1,2,3,4]
+        [1,2,3,4,5,6,7,8,9].rightElement = [6,7,8,9]
 
         var length = array.length;
         if (length > 1) {
