--- a/test/bbst.html
+++ b/test/bbst.html
@@ -172,7 +172,7 @@
           }
         }
 
-        document.body.appendChild(table);
+        // document.body.appendChild(table);
       }
     </script>
   </body>
