array push right element

--- a/test/bbst.html
+++ b/test/bbst.html
@@ -147,6 +147,7 @@
 
           level++;
           sortedArray.push(leftElement);
+          sortedArray.push(rightElement);
           node(leftElement, level);
           node(rightElement, level);
         } else {
