sorted Array var

--- a/test/bbst.html
+++ b/test/bbst.html
@@ -83,7 +83,7 @@
         });
         document.getElementById("sorted").innerHTML = array;
         node(array, 1);
-        createBinaryTreeTable(array);
+        createBinaryTreeTable(sortedArray);
       }
 
       function node(array, level) {
